# AI-Project

./: .gitignore  AI Project.ipynb  NFWBS_PUF_2016_read_in_PY27.py  README.md  Xai.ipynb  app.py  end-to-end.ipynb  fine_tuning.ipynb  model.py  model_comparison.ipynb  open_ai.ipynb  open_ai.py  pyproject.toml  requirements.txt
app/: data_cleaning.py
notebooks/experiments/: fine_tuning.ipynb  model_comparison.ipynb  open_ai.ipynb
notebooks/explainability/: Xai.ipynb
notebooks/exploratory/: univariate.html
src/api/: streamlit_app.py
src/data/: eda.py
src/utils/: columns_decode.py
