[project]
name = "pip-poetry-and-uv"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Pham",email = "minh.pham@insurify.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly",
    "pandas",
    "numpy",
    "streamlit",
    "boto3",
    "openai",
    "seaborn",
    "matplotlib",
    "tensorflow",
    "scikit-learn",
    "lime",
    "python-dotenv",
    "python-dateutil"
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"